tests/elab/fail/multiple_definitions1.t20
;; Defining the same thing twice.

(: foo Int)
(define foo 42)
(define foo 40)
